# muine

./: .cvsignore  AUTHORS  ChangeLog  ChangeLog.20090722  ChangeLog.README  HACKING  MAINTAINERS  Makefile.am  NEWS  PLUGINS  README  TODO  autogen.sh  configure.in  muine.doap  muine.spec.in
ClientLib/: .cvsignore  Makefile.am  Player.cs
DBusLib/: .cvsignore  AssemblyInfo.cs  Makefile.am  Player.cs
PluginLib/: .cvsignore  AssemblyInfo.cs  IPlayer.cs  ISong.cs  Makefile.am  PlayerInterface.cs  Plugin.cs  SongInterface.cs
data/: .cvsignore  Makefile.am  muine-client.pc.in  muine-dbus.pc.in  muine-plugin.pc.in  muine.applications  muine.desktop.in  muine.pc.in  muine.schemas.in
data/glade/: .cvsignore  AddWindow.glade  ErrorDialog.glade  GroupsWindow.glade  InfoWindow.glade  Makefile.am  NoMusicFoundWindow.glade  OverwriteDialog.glade  PlaylistWindow.glade  ProgressWindow.glade  SearchMusicWindow.glade  SkipToWindow.glade  YesNoDialog.glade
data/images/: Makefile.am
data/ui/: Makefile.am  NotificationAreaIcon.xml  PlaylistWindow.xml
doc/: .cvsignore  Makefile.am
doc/en/: MuineDBusLib.xml  MuinePluginLib.xml
doc/en/Muine.DBusLib/: Player.xml  SongChangedHandler.xml  StateChangedHandler.xml
doc/en/Muine.PluginLib/: GenericEventHandler.xml  IPlayer.xml  ISong.xml  Plugin.xml  SongChangedEventHandler.xml  StateChangedEventHandler.xml  TickEventHandler.xml
doc/en/MuineDBusLib/: Player.xml  SongChangedHandler.xml  StateChangedHandler.xml
doc/en/MuinePluginLib/: GenericEventHandler.xml  IPlayer.xml  ISong.xml  Plugin.xml  SongChangedEventHandler.xml  StateChangedEventHandler.xml
libmuine/: Makefile.am  db.c  db.h  gettext-utils.c  gettext-utils.h  gsequence.c  gsequence.h  gtk-glue.c  gtk-glue.h  macros.h  markup-utils.c  markup-utils.h  metadata-gst.c  metadata.c  metadata.h  mm-keys.c  mm-keys.h  ogg-helper.c  player-gst-0.7.c  player-gst-0.8.c  player-gst.c  player-xine.c  player.c  player.h  pointer-list-model.c  pointer-list-model.h  pointer-list-view.c  pointer-list-view.h  rb-cell-renderer-pixbuf.c  rb-cell-renderer-pixbuf.h  string-utils.c  string-utils.h  volume-button.c  volume-button.h
libmuine/egg/: Makefile.am  eggmarshalers.c  update-from-egg.sh
libmuine/id3-vfs/: Makefile.am  id3-vfs.c  id3-vfs.h  mp3bitrate.c  mp3bitrate.h
plugins/: .cvsignore  DashboardPlugin.cs  Inotify.cs  InotifyPlugin.cs  Makefile.am  TrayIcon.cs  TrayIcon.dll.config  TrayIcon.xml  egg-sharp.cs  inotify-glue.c
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.in  Makefile.in.in.override  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  is.po  ja.po  ko.po  lt.po  lv.po  mk.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  (+12 more)
src/: .cvsignore  About.cs  Action.cs  ActionThread.cs  Actions.cs  AddAlbumWindow.cs  AddSongWindow.cs  AddWindow.cs  AddWindowEntry.cs  AddWindowList.cs  Album.cs  AmazonSearchService.cs  CairoRoundOff.cs  CellRendererText.cs  ColoredCellRendererPixbuf.cs  Config.cs  CoverDatabase.cs  CoverGetter.cs  CoverImage.cs  DBusService.cs  DashboardFrontend.cs  Database.cs  DatabaseUtils.cs  DndUtils.cs  EllipsizingLabel.cs  ErrorDialog.cs  FileSelector.cs  FileUtils.cs  GettextCatalog.cs  Global.cs  GnomeMMKeys.cs  GnomeProxy.cs  GroupWindow.cs  HandleModel.cs  HandleView.cs  ImportDialog.cs  InfoWindow.cs  Item.cs  KeyUtils.cs  LibraryWindow.cs  (+33 more)
