SUBDIRS = 		\
	data		\
	libmuine	\
	deps		\
	PluginLib	\
	DBusLib		\
	src		\
	plugins		\
	doc		\
	m4		\
	po

EXTRA_DIST =			\
	TODO			\
	HACKING			\
	PLUGINS			\
	MAINTAINERS		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	muine.spec.in		\
	muine.spec		\
	muine.snk

DISTCLEANFILES = 		\
	intltool-extract 	\
	intltool-merge 		\
	intltool-update
