NULL =

SUBDIRS = 		\
	data		\
	libmuine	\
	deps		\
	PluginLib	\
	DBusLib		\
	src		\
	plugins		\
	doc		\
	m4		\
	po		\
	$(NULL)

EXTRA_DIST =			\
	TODO			\
	HACKING			\
	PLUGINS			\
	MAINTAINERS		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	muine.spec.in		\
	muine.spec		\
	muine.snk		\
	$(NULL)

DISTCLEANFILES = 		\
	intltool-extract 	\
	intltool-merge 		\
	intltool-update		\
	$(NULL)

# vim: set ts=8 sw=8 noet:
