NULL =

SUBDIRS = 		\
	data		\
	libmuine	\
	PluginLib	\
	DBusLib		\
	src		\
	plugins		\
	doc		\
	m4		\
	po		\
	$(NULL)

EXTRA_DIST =			\
	TODO			\
	HACKING			\
	PLUGINS			\
	MAINTAINERS		\
	muine.spec.in		\
	muine.spec		\
	muine.snk		\
	$(NULL)

DISTCLEANFILES = 		\
	$(NULL)

# vim: set ts=8 sw=8 noet:
