noinst_DATA =					\
	muine-about.png				\
	muine-add-album.png			\
	muine-add-album-16.png			\
	muine-next.png				\
	muine-next-16.png			\
	muine-pause.png				\
	muine-pause-16.png			\
	muine-play.png				\
	muine-play-16.png			\
	muine-previous.png			\
	muine-previous-16.png			\
	muine-rewind.png			\
	muine-forward.png			\
	muine-queue.png				\
	muine-playing.png			\
	muine-paused.png			\
	muine-nothing.png			\
	muine-tray-playing.png			\
	muine-tray-paused.png			\
	muine-default-cover.png			\
	muine-cover-downloading.png		\
	muine-volume-zero.png			\
	muine-volume-min.png			\
	muine-volume-medium.png			\
	muine-volume-max.png			\
	muine-shuffle.png			\
	muine-shuffle-16.png

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = muine.png

EXTRA_DIST = $(noinst_DATA) $(pixmap_DATA)
