noinst_DATA =					\
	muine-about.png				\
	muine-add-album.png			\
	muine-add-album-16.png			\
	muine-playing.png			\
	muine-paused.png			\
	muine-nothing.png			\
	muine-tray-playing.png			\
	muine-tray-paused.png			\
	muine-default-cover.png			\
	muine-cover-downloading.png

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = muine.png

EXTRA_DIST = $(noinst_DATA) $(pixmap_DATA)
