noinst_DATA =					\
	muine-about.png				\
	muine-playing.png			\
	muine-paused.png			\
	muine-nothing.png			\
	muine-tray-playing.png			\
	muine-tray-paused.png			\
	muine-default-cover.png			\
	muine-cover-downloading.png		\
	muine-volume-zero.png			\
	muine-volume-min.png			\
	muine-volume-medium.png			\
	muine-volume-max.png

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = muine.png

EXTRA_DIST = $(noinst_DATA) $(pixmap_DATA)
